--- a/templates/conventions/stationnements.html
+++ b/templates/conventions/stationnements.html
@@ -35,9 +35,9 @@
 
                                 <thead>
                                     <tr>
-                                        <th scope="col" style='min-width:150px;'>Type de stationnement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" style='min-width:200px;'>Nombre de staionnements {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" style='min-width:150px;'>Loyer maximum en € {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--150">Type de stationnement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--200">Nombre de staionnements {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--150">Loyer maximum en € {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
