--- a/templates/conventions/submitted.html
+++ b/templates/conventions/submitted.html
@@ -7,7 +7,7 @@
                 <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
                     <h2>Félicitation</h2>
                     <p class="fr-mb-3w">
-                        <span style="font-style: italic;">Référence de la convention : {{convention}}</span>
+                        <span class="content__headline">Référence de la convention : {{convention}}</span>
                     </p>
                     <h4 class="fr-mb-3w">Bravo, vous venez de soumettre votre convention à l'instruction en date du {{convention.soumis_le}}</h4>
                     <p class="fr-mb-3w">La présente convention ne peut plus être modifiée. Le service instructeur a été notifié et instruira cette convention dans les plus bref délais.
