--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="fr-col-12 fr-col-lg-5 fr-pl-0 fr-pl-md-4w">
                     <figure class="fr-content-media fr-my-0">
-                        <img src="{% static "img/accueil.jpg" %}" style="display: block;width: auto;height: auto;" >
+                        <img src="{% static "img/accueil.jpg" %}" class="content__homepage-image">
                     </figure>
                 </div>
             </div>
