--- a/templates/common/convention_edit_info.html
+++ b/templates/common/convention_edit_info.html
@@ -1,3 +1,3 @@
 <p class="fr-mb-3w">
-    <span style="font-style: italic;">Vous éditez actuellement la convention : {{convention}}</span>
+    <span class='content__headline'>Vous éditez actuellement la convention : {{convention}}</span>
 </p>
