--- a/templates/common/display_text_and_files_if_exists.html
+++ b/templates/common/display_text_and_files_if_exists.html
@@ -1,12 +1,4 @@
 {% if file_list or text %}
     <p class="fr-my-1w">{% if label %}{{label}} : {% endif %}{% if text %}{{ text|linebreaks }}{% endif %}</p>
 {% endif %}
-{% for file in file_list %}
-    <div style="display: flex;flex-direction: row;align-items: center;justify-content: left;">
-        <div class='fr-mx-1w dz-image'>
-            <img class="small_thumbnail" {% if file.thumbnail %}src='{{file.thumbnail}}'{% endif %}/>
-        </div>
-        <a class='fr-mx-1w' href='{% url 'upload:display_file' convention_uuid=convention.uuid uploaded_file_uuid=file.uuid %}'>{{file.filename}}</a>
-        - <span class='fr-mx-1w'>{{file.size|filesizeformat}}</span>
-    </div>
-{% endfor %}
+{% include "common/display_files.html" with file_list=file_list %}
