--- a/templates/common/form/input_number.html
+++ b/templates/common/form/input_number.html
@@ -18,7 +18,7 @@
         type="number"
         id="{{form_input.id_for_label}}"
         name="{{form_input.html_name}}"
-        value="{{ form_input.value|unlocalize|default_if_none:'' }}"
+        {% if form_input.value %}value="{{ form_input.value|unlocalize }}"{% endif %}
         {% if not editable %}disabled{% endif %}>
     {% for error in form_input.errors %}
         <p id="text-input-error-desc-error" class="fr-error-text">
