--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -49,15 +49,24 @@
                     l'application des scripts javascript ou d'utiliser un autre navigateur.
                 </div>
             </div>
-            <input hidden
+            <input
                 type="hidden"
                 id="{{form_input_files.id_for_label}}"
                 name="{{form_input_files.html_name}}"
                 value="{{form_input_files.value}}" />
             <div id="{{form_input_files.id_for_label}}_errors"></div>
+            <input
+                type="hidden"
+                id="{{form_input_files.id_for_label}}_object_name"
+                value="{{ object_name }}">
+            <input
+                type="hidden"
+                id="{{form_input_files.id_for_label}}_object_uuid"
+                value="{{ object_uuid }}">
+
             <script type="text/javascript">
                 //        document.addEventListener("DOMContentLoaded", function() {
-                let {{form_input.id_for_label}} = init_dropzone_from_file("{{form_input_files.id_for_label}}", '{{ csrf_token }}', { '{{ object_name }}' : '{{ object_uuid }}' }  {% if image_only %}, 'image/*'{% endif %});
+                let {{form_input.id_for_label}} = init_dropzone_from_file("{{form_input_files.id_for_label}}" {% if image_only %}, 'image/*'{% endif %});
                 init_dropzone_list({{form_input.id_for_label}},"{{form_input_files.id_for_label}}")
                 //        });
             </script>
