--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -73,7 +73,7 @@
                                                         Attention
                                                     </h1>
                                                     {% for error in formset.optional_errors %}
-                                                        <p id="text-input-error-desc-error" class="fr-error-text" style="font-size: 1rem;">
+                                                        <p id="text-input-error-desc-error" class="fr-error-text modal__error-text">
                                                             {{ error.message }}
                                                         </p>
                                                     {% endfor %}
