--- a/templates/conventions/logements.html
+++ b/templates/conventions/logements.html
@@ -1,5 +1,7 @@
 {% extends "layout/base.html" %}
 
+{% load static %}
+
 {% block content %}
     <div class="fr-container-fluid ds_banner fr-pb-1w">
         <div class="fr-container">
@@ -35,15 +37,15 @@
 
                                 <thead>
                                     <tr>
-                                        <th scope="col" style='min-width:200px;'>Désignation {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" style='min-width:150px;'>Type {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" style='min-width:120px;'>Surface habitable {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" style='min-width:120px;'>Surface des annexes réelle {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" style='min-width:120px;'>Surface des annexes retenue dans la SU {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" style='min-width:120px;'>Surface Utile {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" style='min-width:120px;'>Loyer maxinum en € par m² de surface utile {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" style='min-width:120px;'>Coefficient propre au logement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en € {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--200">Désignation {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--150">Type {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--120">Surface habitable {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--120">Surface des annexes réelle {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--120">Surface des annexes retenue dans la SU {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--120">Surface Utile {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--120">Loyer maxinum en € par m² de surface utile {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--120">Coefficient propre au logement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--120">Loyer maxinum du logement en € {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -106,19 +108,19 @@
                                         </td>
                                         <td>
                                         </td>
-                                        <td id="total_sh" class="fr-text--lg" style="text-align: center;">
+                                        <td id="total_sh" class="fr-text--lg text--center">
                                         </td>
-                                        <td id="total_sa" class="fr-text--lg" style="text-align: center;">
+                                        <td id="total_sa" class="fr-text--lg text--center">
                                         </td>
-                                        <td id="total_sar" class="fr-text--lg" style="text-align: center;">
+                                        <td id="total_sar" class="fr-text--lg text--center">
                                         </td>
-                                        <td id="total_su" class="fr-text--lg" style="text-align: center;">
-                                        </td>
-                                        <td>
+                                        <td id="total_su" class="fr-text--lg text--center">
                                         </td>
                                         <td>
                                         </td>
-                                        <td id="total_loyer" class="fr-text--lg" style="text-align: center;">
+                                        <td>
+                                        </td>
+                                        <td id="total_loyer" class="fr-text--lg text--center">
                                         </td>
                                     </tr>
                                 </tbody>
@@ -137,19 +139,6 @@
             </form>
         </div>
     </div>
-    <script  type="text/javascript">
-        function compute_total_value(what){
-            elements = document.querySelectorAll('[id=lgt_' + what + ']');
-            total_value = 0;
-            for ( i =0, len = elements.length; i<len; i++) {
-                total_value = total_value + parseFloat(elements[i].getElementsByTagName('input')[0].value);
-            }
-            document.getElementById('total_' + what).innerHTML = "<span>" + total_value.toFixed(2).replace('.',',').replace(/\B(?=(\d{3})+(?!\d))/g, " ") + "</span>";
-        }
-        compute_total_value('sh')
-        compute_total_value('sa')
-        compute_total_value('sar')
-        compute_total_value('su')
-        compute_total_value('loyer')
-    </script>
+    <script type="text/javascript" src="{% static "js/logements-table.js" %}"></script>
+
 {% endblock %}
