--- a/templates/conventions/saved.html
+++ b/templates/conventions/saved.html
@@ -7,7 +7,7 @@
                 <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
                     <h2>Votre convention a été enregistrée !</h2>
                     <p class="fr-mb-3w">
-                        <span style="font-style: italic;">Référence de la convention : {{convention}}</span>
+                        <span class="content__headline">Référence de la convention : {{convention}}</span>
                     </p>
                     <div role="alert" class="fr-alert fr-alert--error">
                         <p>ATTENTION</p>
