fix total of logements in recap

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -472,7 +472,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="{% static "js/logements-table.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/recap-logements-table.js" %}"></script>
 
 
 {% endblock %}
