--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -64,7 +64,7 @@
                 id="{{form_input_files.id_for_label}}_object_uuid"
                 value="{{ object_uuid }}">
 
-            <script type="text/javascript">
+            <script type="text/javascript" nonce="{{request.csp_nonce}}">
                 //        document.addEventListener("DOMContentLoaded", function() {
                 let {{form_input.id_for_label}} = init_dropzone_from_file("{{form_input_files.id_for_label}}" {% if image_only %}, 'image/*'{% endif %});
                 init_dropzone_list({{form_input.id_for_label}},"{{form_input_files.id_for_label}}")
