--- a/templates/conventions/logements.html
+++ b/templates/conventions/logements.html
@@ -139,6 +139,6 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="{% static "js/logements-table.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/logements-table.js" %}" nonce="{{request.csp_nonce}}"></script>
 
 {% endblock %}
